Suppression de l’attribut "lang" de la balise meta description

--- a/tpl/__layout.html
+++ b/tpl/__layout.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- # The main layout of the template. -->
 <html lang="{{tpl:BlogLanguage}}">
   <head>
     <meta charset="UTF-8" />
@@ -16,6 +17,7 @@
       <meta name="robots" content="{{tpl:BlogMetaRobots}}" />
     </tpl:Block>
 
+    <!-- # Loads the minified stylesheet. -->
     <link rel="stylesheet" type="text/css" href="{{tpl:BlogThemeURL}}/style.min.css" />
     <link rel="alternate" type="application/atom+xml" title="RSS" href="{{tpl:BlogFeedURL}}" />
 
