--- a/tpl/category.html
+++ b/tpl/category.html
@@ -5,7 +5,7 @@
 </tpl:Block>
 
 <tpl:Block name="head-description">
-  <meta name="description" lang="{{tpl:BlogLanguage}}" content="{{tpl:CategoryDescription encode_html="1" remove_html="1"}}" />
+  <meta name="description" content="{{tpl:CategoryDescription encode_html="1" remove_html="1"}}" />
 </tpl:Block>
 
 <tpl:Block name="main-content">
