--- a/tpl/home.html
+++ b/tpl/home.html
@@ -5,7 +5,7 @@
 </tpl:Block>
 
 <tpl:Block name="head-description">
-  <meta name="description" lang="{{tpl:BlogLanguage}}" content="{{tpl:BlogDescription}}<tpl:PaginationIf start="0">  - {{tpl:lang page}} {{tpl:PaginationCurrent}}</tpl:PaginationIf>" />
+  <meta name="description" content="{{tpl:BlogDescription}}<tpl:PaginationIf start="0">  - {{tpl:lang page}} {{tpl:PaginationCurrent}}</tpl:PaginationIf>" />
 </tpl:Block>
 
 <tpl:Block name="site-header">
