--- a/tpl/password-form.html
+++ b/tpl/password-form.html
@@ -6,11 +6,11 @@
 
 <tpl:Block name="head-description">
   <tpl:EntryIf extended="1">
-    <meta name="description" lang="{{tpl:EntryLang}}" content="{{tpl:EntryExcerpt encode_html="1" remove_html="1"}}" />
+    <meta name="description" content="{{tpl:EntryExcerpt encode_html="1" remove_html="1"}}" />
   </tpl:EntryIf>
 
   <tpl:EntryIf extended="0">
-    <meta name="description" lang="{{tpl:EntryLang}}" content="{{tpl:EntryContent encode_html="1" remove_html="1" cut_string="150"}}<tpl:EntryIfContentIsCut encode_html="1" remove_html="1" cut_string="150">&hellip;</tpl:EntryIfContentIsCut>">
+    <meta name="description" content="{{tpl:EntryContent encode_html="1" remove_html="1" cut_string="150"}}<tpl:EntryIfContentIsCut encode_html="1" remove_html="1" cut_string="150">&hellip;</tpl:EntryIfContentIsCut>">
   </tpl:EntryIf>
 </tpl:Block>
 
