Ajout de documentation

--- a/tpl/home.html
+++ b/tpl/home.html
@@ -9,6 +9,7 @@
 </tpl:Block>
 
 <tpl:Block name="site-header">
+  <!-- # Use h1 & h2 headings for site title & description on home only. -->
   <tpl:PaginationIf end="0">
     <h1 id="site-title">{{tpl:BlogName}}</h1>
   </tpl:PaginationIf>
