Mise à correction des traductions et ajout de traductions manquantes

--- a/tpl/search.html
+++ b/tpl/search.html
@@ -13,11 +13,11 @@
     <section class="page-content content">
       <form action="{{tpl:BlogURL}}" id="page-search-form" method="get" role="search">
         <div class="form-entry">
-          <input aria-label="Recherche" class="page-search-form-input" maxlength="255" name="q" placeholder="Les termes de votre recherche" type="text" value="{{tpl:SysSearchString}}" />
+          <input aria-label="Recherche" class="page-search-form-input" maxlength="255" name="q" placeholder="{{tpl:lang Search terms}}" type="text" value="{{tpl:SysSearchString}}" />
         </div>
 
         <div class="form-entry">
-          <input type="submit" value="Rechercher" />
+          <input type="submit" value="{{tpl:lang Send}}" />
         </div>
       </form>
     </section>
