Harmonisation et amélioration de la syntaxe

--- a/tpl/__layout.html
+++ b/tpl/__layout.html
@@ -10,7 +10,7 @@
     </tpl:Block>
 
     <tpl:Block name="head-description">
-      <meta name="description" content="{{tpl:BlogDescription remove_html="1" encode_html="1"}}<tpl:PaginationIf start="0"> - {{tpl:lang page}} {{tpl:PaginationCurrent}}</tpl:PaginationIf>" />
+      <meta name="description" content="{{tpl:BlogDescription remove_html="1" encode_html="1"}}<tpl:PaginationIf start="0"> – {{tpl:lang page}} {{tpl:PaginationCurrent}}</tpl:PaginationIf>" />
     </tpl:Block>
 
     <tpl:Block name="head-meta">
