--- a/tpl/_entry-list.html
+++ b/tpl/_entry-list.html
@@ -22,7 +22,7 @@
 
       <!-- # Entry without excerpt -->
       <tpl:EntryIf extended="0">
-          <a href="{{tpl:EntryURL}}">{{tpl:EntryContent encode_html="1" remove_html="1" cut_string="200"}}<tpl:EntryIfContentCut encode_html="1" remove_html="1" cut_string="200">&nbsp;[&hellip;]</tpl:EntryIfContentCut></a>
+          <a href="{{tpl:EntryURL}}">{{tpl:EntryContent encode_html="1" remove_html="1" cut_string="200"}}<tpl:EntryIfContentCut encode_html="1" remove_html="1" cut_string="200">&nbsp;[…]</tpl:EntryIfContentCut></a>
       </tpl:EntryIf>
     </section>
   <tpl:EntryIf></div></tpl:EntryIf>
