--- a/tpl/password-form.html
+++ b/tpl/password-form.html
@@ -1,7 +1,7 @@
 {{tpl:extends parent="__layout.html"}}
 
 <tpl:Block name="head-title">
-  <title>{{tpl:lang Password needed}} - {{tpl:BlogName encode_html="1"}}</title>
+  <title>{{tpl:lang Password needed}} – {{tpl:BlogName encode_html="1"}}</title>
 </tpl:Block>
 
 <tpl:Block name="head-description">
@@ -10,7 +10,7 @@
   </tpl:EntryIf>
 
   <tpl:EntryIf extended="0">
-    <meta name="description" content="{{tpl:EntryContent encode_html="1" remove_html="1" cut_string="150"}}<tpl:EntryIfContentIsCut encode_html="1" remove_html="1" cut_string="150">&hellip;</tpl:EntryIfContentIsCut>">
+    <meta name="description" content="{{tpl:EntryContent encode_html="1" remove_html="1" cut_string="150"}}<tpl:EntryIfContentCut encode_html="1" remove_html="1" cut_string="150"> […]</tpl:EntryIfContentCut>
   </tpl:EntryIf>
 </tpl:Block>
 
