--- a/tpl/search.html
+++ b/tpl/search.html
@@ -1,7 +1,7 @@
 {{tpl:extends parent="__layout.html"}}
 
 <tpl:Block name="head-title">
-  <title>{{tpl:lang Search results for}} &quot;{{tpl:SysSearchString encode_html="1"}}&quot; {{tpl:lang of}} {{tpl:BlogName encode_html="1"}}</title>
+  <title>{{tpl:SysSearchString encode_html="1"}} – {{tpl:BlogName encode_html="1"}}</title>
 </tpl:Block>
 
 <tpl:Block name="head-description"></tpl:Block>
