--- a/tpl/tag.html
+++ b/tpl/tag.html
@@ -1,7 +1,7 @@
 {{tpl:extends parent="__layout.html"}}
 
 <tpl:Block name="head-title">
-  <title>{{tpl:TagID encode_html="1"}} &lsaquo; {{tpl:BlogName encode_html="1"}}</title>
+  <title>{{tpl:TagID encode_html="1"}} – {{tpl:BlogName encode_html="1"}}</title>
 </tpl:Block>
 
 <tpl:Block name="head-description">
