--- a/tpl/tags.html
+++ b/tpl/tags.html
@@ -1,7 +1,7 @@
 {{tpl:extends parent="__layout.html"}}
 
 <tpl:Block name="head-title">
-  <title>{{tpl:lang Tags}} &lsaquo; {{tpl:BlogName encode_html="1"}}</title>
+  <title>{{tpl:lang Tags}} – {{tpl:BlogName encode_html="1"}}</title>
 </tpl:Block>
 
 <tpl:Block name="head-description"></tpl:Block>
