--- a/tpl/_pagination.html
+++ b/tpl/_pagination.html
@@ -7,13 +7,13 @@
     <div class="page-navigation">
       <tpl:PaginationIf start="0">
         <div class="page-prev">
-          <a href="{{tpl:PaginationURL offset="-1"}}">{{tpl:lang &lsaquo; Previous page}}</a>
+          <a href="{{tpl:PaginationURL offset="-1"}}">{{tpl:lang ‹ Previous page}}</a>
         </div>
       </tpl:PaginationIf>
 
       <tpl:PaginationIf end="0">
         <div class="page-next">
-          <a href="{{tpl:PaginationURL offset="+1"}}">{{tpl:lang Next page &rsaquo;}}</a>
+          <a href="{{tpl:PaginationURL offset="+1"}}">{{tpl:lang Next page ›}}</a>
         </div>
       </tpl:PaginationIf>
     </div>
