--- a/tpl/page.html
+++ b/tpl/page.html
@@ -10,7 +10,7 @@
   </tpl:EntryIf>
 
   <tpl:EntryIf extended="0">
-    <meta name="description"{{tpl:origineEntryLang}} content="{{tpl:EntryContent encode_html="1" remove_html="1" cut_string="150"}}<tpl:EntryIfContentIsCut encode_html="1" remove_html="1" cut_string="150">&hellip;</tpl:EntryIfContentIsCut>">
+    <meta name="description"{{tpl:origineEntryLang}} content="{{tpl:EntryContent encode_html="1" remove_html="1" cut_string="150"}}<tpl:EntryIfContentCut encode_html="1" remove_html="1" cut_string="150"> […]</tpl:EntryIfContentCut>
   </tpl:EntryIf>
 </tpl:Block>
 
