Correction no 2 oubli de fermeture de la base meta description

--- a/tpl/password-form.html
+++ b/tpl/password-form.html
@@ -10,7 +10,7 @@
   </tpl:EntryIf>
 
   <tpl:EntryIf extended="0">
-    <meta name="description" content="{{tpl:EntryContent encode_html="1" remove_html="1" cut_string="150"}}<tpl:EntryIfContentCut encode_html="1" remove_html="1" cut_string="150">[…]</tpl:EntryIfContentCut> />
+    <meta name="description" content="{{tpl:EntryContent encode_html="1" remove_html="1" cut_string="150"}}<tpl:EntryIfContentCut encode_html="1" remove_html="1" cut_string="150"> […]</tpl:EntryIfContentCut>" />
   </tpl:EntryIf>
 </tpl:Block>
 
