--- a/tpl/_comments.html
+++ b/tpl/_comments.html
@@ -131,6 +131,10 @@
   </tpl:Block>
 </tpl:EntryIf>
 
+<div class="comments-feed-link">
+  <a href="{{tpl:BlogFeedURL type="atom"}}/comments/{{tpl:EntryID}}">{{tpl:lang Comment feed}}</a>
+</div>
+
 <tpl:EntryIf operator="or" comments_active="1" pings_active="1">
   </div>
 </tpl:EntryIf>
