Correction d’une erreur d’affichage du titre du site dans les pages suivantes

--- a/tpl/home.html
+++ b/tpl/home.html
@@ -10,7 +10,7 @@
 
 <tpl:Block name="site-header">
   <!-- # Use h1 & h2 headings for site title & description on home only. -->
-  <tpl:PaginationIf end="0">
+  <tpl:PaginationIf start="1">
     <h1 id="site-title">{{tpl:BlogName}}</h1>
   </tpl:PaginationIf>
 
