Ajout d’un lien vers le contenu pour les lecteurs d’écran

--- a/tpl/__layout.html
+++ b/tpl/__layout.html
@@ -25,6 +25,11 @@
   </head>
 
   <body>
+    <!-- # Screen reader links -->
+    <a id='skip-nav' class='skip-links' href='#site-content'>
+      {{tpl:lang Skip to content}}
+    </a>
+
     <div id="site">
       <header id="site-header">
         <tpl:Block name="site-header">
