Prise en charge des schémas de couleurs par l’extenstion

--- a/tpl/__layout.html
+++ b/tpl/__layout.html
@@ -19,6 +19,30 @@
 
     <!-- # Styles to inline. -->
     <tpl:origineInlineStyles>
+      :root { /* "prefers-color-scheme: light" not used for better browser support. */
+        --color-background: #fff;
+        --color-text-primary: #000;
+        --color-text-secondary: #595959; /* rgb(0, 0, 0, 0.65) */
+        --color-link: #de0000;
+        --color-border: #aaa;
+        --color-input-text: #000;
+        --color-input-text-hover: #fff;
+        --color-input-background: #eaeaea;
+        --color-input-background-hover: #000;
+      }
+      @media (prefers-color-scheme: dark) {
+        :root {
+          --color-background: #16161D;
+          --color-text-primary: #d9d9d9; /* rgb(255, 255, 255, 0.85) */
+          --color-text-secondary: #8c8c8c; /* rgb(255, 255, 255, 0.55) */
+          --color-link: #f14646;
+          --color-border: #aaa;
+          --color-input-text: #d9d9d9;
+          --color-input-text-hover: #fff;
+          --color-input-background: #333333; /* rgb(255, 255, 255, 0.2) */
+          --color-input-background-hover: #262626; /* rgb(255, 255, 255, 0.15) */
+        }
+      }
       body {
         font-family: "Iowan Old Style", "Apple Garamond", Baskerville, "Times New Roman", "Droid Serif", Times, "Source Serif Pro", serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
         font-size: 12pt;
