--- a/tpl/_entry-list.html
+++ b/tpl/_entry-list.html
@@ -18,7 +18,7 @@
       {{tpl:else}}
 
       <div class="post-meta label">
-        {{tpl:Page}}
+        {{tpl:lang Page}}
       </div>
     </tpl:EntryIf>
 
