--- a/tpl/__layout.html
+++ b/tpl/__layout.html
@@ -27,10 +27,7 @@
   </head>
 
   <body>
-    <!-- # Screen reader links -->
-    <a id='skip-nav' class='skip-links' href='#site-content'>
-      {{tpl:lang Skip to content}}
-    </a>
+    {{tpl:origineScreenReaderLinks}}
 
     <div id="site">
       <header id="site-header">
