Prise en charge option logo

--- a/tpl/home.html
+++ b/tpl/home.html
@@ -9,6 +9,8 @@
 </tpl:Block>
 
 <tpl:Block name="site-header">
+  {{tpl:origineLogo}}
+
   <!-- # Use h1 & h2 headings for site title & description on home only. -->
   <tpl:PaginationIf start="1">
     <h1 id="site-title">{{tpl:BlogName}}</h1>
