--- a/tpl/__layout.html
+++ b/tpl/__layout.html
@@ -32,6 +32,8 @@
     <div id="site">
       <header id="site-header">
         <tpl:Block name="site-header">
+          <a href="{{tpl:BlogURL}}">{{tpl:origineLogo}}</a>
+
           <h4 id="site-title"><a href="{{tpl:BlogURL}}">{{tpl:BlogName}}</a></h4>
 
           <h5 id="site-description">{{tpl:BlogDescription}}</h5>
