Correction chargement scripts dans billets et pages

--- a/tpl/page.html
+++ b/tpl/page.html
@@ -17,3 +17,15 @@
 <tpl:Block name="main-content">
   {{tpl:include src="_entry-page.html"}}
 </tpl:Block>
+
+<tpl:Block name="footer-scripts">
+  <script src="{{tpl:BlogQmarkURL}}pf={{tpl:BlogJsJQuery}}/jquery.js"></script>
+
+  <tpl:EntryIf show_comments="1">
+    <script src="{{tpl:BlogQmarkURL}}pf=util.js"></script>
+    <script type="application/json" id="dc_post_remember_str-data">
+      { "post_remember_str": "{{tpl:lang Remember me}}" }
+    </script>
+    <script src="{{tpl:BlogQmarkURL}}pf=post.js"></script>
+  </tpl:EntryIf>
+</tpl:Block>
