--- a/tpl/post.html
+++ b/tpl/post.html
@@ -21,9 +21,10 @@
 <tpl:Block name="footer-scripts">
   <script src="{{tpl:BlogQmarkURL}}pf={{tpl:BlogJsJQuery}}/jquery.js"></script>
   <script src="{{tpl:BlogQmarkURL}}pf=util.js"></script>
-  <script type="application/json" id="dc_post_remember_str-data">
-    { "post_remember_str": "{{tpl:lang Remember me}}" }
-  </script>
-  <script src="{{tpl:BlogQmarkURL}}pf=post.js"></script>
-  </tpl:Block>
+  <tpl:EntryIf show_comments="1">
+    <script type="application/json" id="dc_post_remember_str-data">
+      { "post_remember_str": "{{tpl:lang Remember me}}" }
+    </script>
+    <script src="{{tpl:BlogQmarkURL}}pf=post.js"></script>
+  </tpl:EntryIf>
 </tpl:Block>
