--- a/tpl/_comments.html
+++ b/tpl/_comments.html
@@ -135,7 +135,7 @@
     <ul>
       <tpl:EntryIf show_comments="1">
         <li>
-          {{tpl:lang Comment feed:}} {{tpl:origineEntryCommentFeedLink}}
+          {{tpl:lang Comment feed:}} {{tpl:origineEntryCommentFeedLink type="atom"}}
         </li>
       </tpl:EntryIf>
 
