--- a/tpl/__layout.html
+++ b/tpl/__layout.html
@@ -47,7 +47,7 @@
       <main id="site-content">
         <tpl:Block name="main-content">
           <tpl:Entries no_content="0">
-            {{tpl:include src="_entry-list.html"}}
+            {{tpl:originePostListType}}
 
             <tpl:EntriesFooter>
               {{tpl:include src="_pagination.html"}}
