Harmonisation thème-extension

--- a/tpl/__layout.html
+++ b/tpl/__layout.html
@@ -32,7 +32,7 @@
     <div id="site">
       <header id="site-header">
         <tpl:Block name="site-header">
-          {{tpl:origineLogo link_home="1"}}
+          {{tpl:origineConfigLogo link_home="1"}}
 
           <h4 id="site-title"><a href="{{tpl:BlogURL}}">{{tpl:BlogName}}</a></h4>
 
