--- a/tpl/_comments.html
+++ b/tpl/_comments.html
@@ -128,7 +128,7 @@
   </tpl:Block>
 </tpl:EntryIf>
 
-{{tpl:origineEmailAuthor}}
+{{tpl:origineConfigEmailAuthor}}
 
 <tpl:origineCommentLinks>
   <div class="comment-links">
