Changement type liste de billets sur tous les modèles

--- a/tpl/tag.html
+++ b/tpl/tag.html
@@ -16,7 +16,7 @@
   </header>
 
   <tpl:Entries>
-    {{tpl:include src="_entry-list.html"}}
+    {{tpl:originePostListType}}
 
     <tpl:EntriesFooter>
       {{tpl:include src="_pagination.html"}}
