--- a/tpl/search.html
+++ b/tpl/search.html
@@ -36,7 +36,7 @@
   </tpl:SysIf>
 
   <tpl:Entries>
-    {{tpl:include src="_entry-list.html"}}
+    {{tpl:originePostListType}}
 
     <tpl:EntriesFooter>
       {{tpl:include src="_pagination.html"}}
