Localisation URL Dotclear pied de page

--- a/tpl/_footer.html
+++ b/tpl/_footer.html
@@ -5,7 +5,7 @@
 
   <tpl:origineFooterCredits>
     <div class="site-footer-line" id="site-footer-ad">
-      {{tpl:lang Powered by}} <a href="https://fr.dotclear.org/">{{tpl:lang Dotclear}}</a>, {{tpl:lang designed by}} <a href="https://github.com/te2dy/origine/">Origine</a>
+      {{tpl:lang Powered by}} <a href="{{tpl:lang https://dotclear.org/}}">{{tpl:lang Dotclear}}</a>, {{tpl:lang designed by}} <a href="https://github.com/te2dy/origine/">Origine</a>
     </div>
   </tpl:origineFooterCredits>
 
