--- a/tpl/_footer.html
+++ b/tpl/_footer.html
@@ -10,7 +10,7 @@
   {{tpl:SysBehavior behavior="publicFooterContent"}}
 
   <tpl:origineFooterCredits>
-    <div class="site-footer-line" id="site-footer-ad">
+    <div class="widget" id="site-footer-ad">
       {{tpl:lang Powered by}} <a href="{{tpl:lang https://dotclear.org/}}">{{tpl:lang Dotclear}}</a>, {{tpl:lang designed by}} <a href="https://github.com/te2dy/origine/">Origine</a>
     </div>
   </tpl:origineFooterCredits>
