--- a/tpl/_footer.html
+++ b/tpl/_footer.html
@@ -11,7 +11,7 @@
 
   <tpl:origineFooterCredits>
     <div class="widget" id="site-footer-ad">
-      {{tpl:lang Powered by}} <a href="{{tpl:lang https://dotclear.org/}}">{{tpl:lang Dotclear}}</a>, {{tpl:lang designed by}} <a href="https://github.com/te2dy/origine/">Origine</a>
+      {{tpl:lang Powered by}} <a href="{{tpl:lang https://dotclear.org/}}">{{tpl:lang Dotclear}}</a>, {{tpl:lang designed by}} <a href="https://themes.dotaddict.org/galerie-dc2/details/origine">Origine</a>
     </div>
   </tpl:origineFooterCredits>
 </footer>
