Ajout attribut text-secondary quand nécessaire

--- a/tpl/__layout.html
+++ b/tpl/__layout.html
@@ -36,7 +36,7 @@
 
           <h4 id="site-title"><a href="{{tpl:BlogURL}}">{{tpl:BlogName}}</a></h4>
 
-          <h5 id="site-description">{{tpl:BlogDescription}}</h5>
+          <h5 class="text-secondary" id="site-description">{{tpl:BlogDescription}}</h5>
 
           {{tpl:SimpleMenu id="main-menu"}}
 
