--- a/tpl/_footer.html
+++ b/tpl/_footer.html
@@ -1,4 +1,4 @@
-<footer id="site-footer">
+<footer class="text-secondary" id="site-footer">
   {{tpl:Widgets type="custom"}}
 
   <tpl:SysIf jquery_needed="1">
