--- a/tpl/_pagination.html
+++ b/tpl/_pagination.html
@@ -1,5 +1,5 @@
 <tpl:Pagination>
-  <div class="pagination">
+  <div class="pagination text-secondary">
     <div class="page-current">
       {{tpl:lang page}} {{tpl:PaginationCurrent}} {{tpl:lang of}} {{tpl:PaginationCounter}}
     </div>
