Changement style label

--- a/tpl/home.html
+++ b/tpl/home.html
@@ -22,7 +22,7 @@
     <h1 id="site-title"><a href="{{tpl:BlogURL}}">{{tpl:BlogName}}</a></h1>
   </tpl:PaginationIf>
 
-  <h2 id="site-description">{{tpl:BlogDescription}}</h2>
+  <h2 id="site-description" class="text-secondary">{{tpl:BlogDescription}}</h2>
 
   {{tpl:SimpleMenu id="main-menu"}}
 
