--- a/tpl/tag.html
+++ b/tpl/tag.html
@@ -10,7 +10,7 @@
 
 <tpl:Block name="main-content">
   <header class="content-info">
-    <span class="content-label">{{tpl:lang tag}}</span>
+    <span class="label">{{tpl:lang tag}}</span>
 
     <h1 class="content-title">{{tpl:TagID}}</h1>
   </header>
