Harmonisation des styles

--- a/tpl/_entry-post.html
+++ b/tpl/_entry-post.html
@@ -1,7 +1,7 @@
 <article id="{{tpl:lang post}}-{{tpl:EntryID}}" class="post post-single {{tpl:EntryIfOdd}} {{tpl:EntryIfFirst}}"{{tpl:origineEntryLang}}>
   <header>
     <tpl:origineEntryIfSelected>
-      <div class="post-selected-label">
+      <div class="label label-selected">
         {{tpl:lang Selected post}}
       </div>
     </tpl:origineEntryIfSelected>
