--- a/tpl/static.html
+++ b/tpl/static.html
@@ -13,8 +13,8 @@
     {{tpl:BlogStaticEntryURL}}
 
     <tpl:Entries>
-      <article id="{{tpl:lang page}}-{{tpl:EntryID}}" class="page">
-        <section class="content">
+      <article id="{{tpl:lang page}}-{{tpl:EntryID}}" class="page"{{tpl:origineEntryLang}}>
+        <section class="text">
           {{tpl:SysBehavior behavior="publicEntryBeforeContent"}}
 
           {{tpl:EntryContent}}
