--- a/tpl/_pagination.html
+++ b/tpl/_pagination.html
@@ -4,16 +4,16 @@
       {{tpl:lang page}} {{tpl:PaginationCurrent}} {{tpl:lang of}} {{tpl:PaginationCounter}}
     </div>
 
-    <div class="page-navigation">
+    <div class="pagination-links">
       <tpl:PaginationIf start="0">
         <div class="page-prev">
-          <a href="{{tpl:PaginationURL offset="-1"}}">{{tpl:lang ‹ Previous page}}</a>
+          <a aria-label="{{tpl:lang Link to previous posts}}" href="{{tpl:PaginationURL offset="-1"}}">{{tpl:lang ‹ Previous page}}</a>
         </div>
       </tpl:PaginationIf>
 
       <tpl:PaginationIf end="0">
         <div class="page-next">
-          <a href="{{tpl:PaginationURL offset="+1"}}">{{tpl:lang Next page ›}}</a>
+          <a aria-label="{{tpl:lang Link to next posts}}" href="{{tpl:PaginationURL offset="+1"}}">{{tpl:lang Next page ›}}</a>
         </div>
       </tpl:PaginationIf>
     </div>
