Déplacement widget navigation dans en-tête

--- a/tpl/__layout.html
+++ b/tpl/__layout.html
@@ -40,6 +40,12 @@
 
           {{tpl:SimpleMenu id="main-menu"}}
 
+          <tpl:origineConfigWidgetsNav>
+            <div id="blognav">
+              {{tpl:Widgets type="nav"}}
+            </div>
+          </tpl:origineConfigWidgetsNav>
+
           {{tpl:SysBehavior behavior="publicTopAfterContent"}}
         </tpl:Block>
       </header>
