--- a/tpl/home.html
+++ b/tpl/home.html
@@ -26,5 +26,11 @@
 
   {{tpl:SimpleMenu id="main-menu"}}
 
+  <tpl:origineConfigWidgetsNav>
+    <div id="blognav">
+      {{tpl:Widgets type="nav"}}
+    </div>
+  </tpl:origineConfigWidgetsNav>
+
   {{tpl:SysBehavior behavior="publicTopAfterContent"}}
 </tpl:Block>
