Amélioration crédits pied de page

--- a/tpl/_footer.html
+++ b/tpl/_footer.html
@@ -9,9 +9,5 @@
 
   {{tpl:SysBehavior behavior="publicFooterContent"}}
 
-  <tpl:origineFooterCredits>
-    <div class="widget" id="site-footer-ad">
-      {{tpl:lang Powered by}} <a href="{{tpl:lang https://dotclear.org/}}">{{tpl:lang Dotclear}}</a> {{tpl:lang and}} <a href="https://themes.dotaddict.org/galerie-dc2/details/origine">Origine</a>
-    </div>
-  </tpl:origineFooterCredits>
+  {{tpl:origineFooterCredits}}
 </footer>
