Transfert image mise en avant vers extension

--- a/tpl/_entry-list-standard.html
+++ b/tpl/_entry-list-standard.html
@@ -23,7 +23,7 @@
     </header>
 
     <section class="post-excerpt text text-secondary">
-      {{tpl:origineEntryFirstImage}}
+      {{tpl:origineConfigEntryFirstImage}}
 
       <!-- # Entry with an excerpt -->
       <tpl:EntryIf extended="1">
