--- a/tpl/_entry-post.html
+++ b/tpl/_entry-post.html
@@ -71,7 +71,7 @@
           </div>
 
           <div class="post-pagination-link-container">
-            <a href="{{tpl:EntryURL}}" rel="prev">
+            <a href="{{tpl:EntryURL}}" rel="next">
               {{tpl:EntryTitle}}
             </a>
           </div>
