--- a/tpl/_entry-post.html
+++ b/tpl/_entry-post.html
@@ -58,7 +58,7 @@
 
           <div class="post-pagination-link-container">
             <a href="{{tpl:EntryURL}}" rel="prev">
-              <em>{{tpl:EntryTitle}}</em>
+              {{tpl:EntryTitle}}
             </a>
           </div>
         </div>
