--- a/tpl/_comments.html
+++ b/tpl/_comments.html
@@ -1,5 +1,5 @@
 <tpl:EntryIf operator="or" comments_active="1" pings_active="1">
-  <div id="comments" class="comment-block">
+  <div id="{{tpl:lang comments}}" class="comment-block">
 </tpl:EntryIf>
 
 <tpl:EntryIf show_comments="1">
@@ -11,16 +11,16 @@
     </tpl:CommentsHeader>
 
     <tpl:CommentIf is_ping="0">
-      <li id="{{tpl:lang comment}}-{{tpl:CommentID}}" class="comment {{tpl:CommentIfMe}} {{tpl:CommentIfOdd}} {{tpl:CommentIfFirst}}">
+      <li id="-{{tpl:CommentID}}" class="comment {{tpl:CommentIfMe}} {{tpl:CommentIfOdd}} {{tpl:CommentIfFirst}}">
     </tpl:CommentIf>
 
     <tpl:CommentIf is_ping="1">
-      <li id="{{tpl:lang comment}}-{{tpl:PingID}}" class="ping {{tpl:PingIfOdd}} {{tpl:PingIfFirst}}">
+      <li id="-{{tpl:PingID}}" class="ping {{tpl:PingIfOdd}} {{tpl:PingIfFirst}}">
     </tpl:CommentIf>
 
     <header class="comment-meta">
       <tpl:CommentIf is_ping="0">
-        <cite class="comment-author">{{tpl:CommentAuthorLink}}</cite><span class="comment-date text-secondary">, <a href="#{{tpl:lang comment}}-{{tpl:CommentID}}">{{tpl:lang on}} {{tpl:CommentDate}} {{tpl:lang at}} {{tpl:CommentTime}}</a>{{tpl:lang :}}</span>
+        <cite class="comment-author">{{tpl:CommentAuthorLink}}</cite><span class="comment-date text-secondary">, <a href="#-{{tpl:CommentID}}">{{tpl:lang on}} {{tpl:CommentDate}} {{tpl:lang at}} {{tpl:CommentTime}}</a>{{tpl:lang :}}</span>
       </tpl:CommentIf>
 
       <tpl:CommentIf is_ping="1">
@@ -33,7 +33,11 @@
 
       {{tpl:CommentContent}}
 
-      <tpl:CommentIf is_ping="1"><a href="{{tpl:CommentAuthorURL}}" ref="nofollow">{{tpl:lang Read this post ›}}</a></tpl:CommentIf>
+      <tpl:CommentIf is_ping="1">
+        <p>
+          <a href="{{tpl:CommentAuthorURL}}" ref="nofollow">{{tpl:lang Read this post ›}}</a>
+        </p>
+      </tpl:CommentIf>
 
       {{tpl:SysBehavior behavior="publicCommentAfterContent"}}
     </div>
@@ -48,30 +52,30 @@
 
 <tpl:EntryIf comments_active="1">
   <tpl:Block name="comment-alerts">
-    <tpl:SysIfFormError>
-      <div class="comment-message message-red" id="{{tpl:lang preview}}">
-        {{tpl:SysFormError}}
-      </div>
-    </tpl:SysIfFormError>
-
     <tpl:SysIfCommentPublished>
-      <div class="comment-message message-green" id="{{tpl:lang preview}}">
-        {{tpl:lang Your comment has been published.}}
-      </div>
+      <p class="comment-message" id="{{tpl:lang comment}}">
+        🟢 {{tpl:lang Your comment has been published.}}
+      </p>
     </tpl:SysIfCommentPublished>
 
     <tpl:SysIfCommentPending>
-      <div class="comment-message message-orange" id="{{tpl:lang preview}}">
-        {{tpl:lang Your comment has been submitted and will be reviewed for publication.}}
-      </div>
+      <p class="comment-message" id="{{tpl:lang comment}}">
+        🟠 {{tpl:lang Your comment has been submitted and will be reviewed for publication.}}
+      </p>
     </tpl:SysIfCommentPending>
+
+    <tpl:SysIfFormError>
+      <p class="comment-message" id="{{tpl:lang comment}}">
+        🔴 {{tpl:SysFormError}}
+      </p>
+    </tpl:SysIfFormError>
   </tpl:Block>
 
   <tpl:Block name="comment-form">
-    <form action="{{tpl:EntryURL}}#{{tpl:lang preview}}" method="post" id="comment-form">
+    <form action="{{tpl:EntryURL}}#{{tpl:lang comment}}" method="post" id="comment-form">
       <tpl:Block name="comment-form-preview">
         <tpl:IfCommentPreview>
-          <div id="{{tpl:lang preview}}" class="comment-preview">
+          <div id="{{tpl:lang comment}}" class="comment-preview">
             <div class="comment-preview-info">
               <h3>{{tpl:lang Previewing}}</h3>
             </div>
@@ -109,7 +113,7 @@
         </div>
 
         <div class="form-entry">
-          <label for="c_content">{{tpl:lang Comment}}</label>
+          <label for="c_content"></label>
           <textarea name="c_content" id="c_content" cols="50"
            rows="7" required>{{tpl:CommentPreviewContent raw="1" encode_html="1"}}</textarea>
         </div>
@@ -120,7 +124,7 @@
           <input type="submit" name="preview" value="{{tpl:lang Preview}}">
 
           <tpl:IfCommentPreviewOptional>
-            <input type="submit" value="{{tpl:lang Send}}" />
+            <input type="submit" value="{{tpl:lang Send}}">
           </tpl:IfCommentPreviewOptional>
         </div>
       </tpl:Block>
